--- a/QuanLyNhaHang/app/src/main/res/values/strings.xml
+++ b/QuanLyNhaHang/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="ten_khach_hang">Tên khách hàng</string>
     <string name="info_ten_khach_hang">Tên khách hàng:</string>
     <string name="so_dien_thoai">Số điện thoại</string>
-    <string name="ghi_chu">Ghi chú</string>
+    <string name="yeu_cau">Yêu cầu</string>
     <string name="nhap_ten_khach_hang">Nhập tên khách hàng</string>
     <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
     <string name="nhap_gio_den">Nhập giờ đến</string>
@@ -60,7 +60,7 @@
     <string name="pv_notify_tinh_tien">Tính tiền - %1$s: %2$s</string>
     <string name="info_so_dien_thoai">Số điện thoại:</string>
     <string name="info_khoang_gio_den">Khoảng giờ đến:</string>
-    <string name="info_ghi_chu">Ghi chú:</string>
+    <string name="info_yeu_cau">Yêu cầu:</string>
     <string name="info_thong_tin_dat_ban">Thông tin đặt bàn:</string>
     <string name="thong_tin_dat_ban">Thông tin đặt bàn</string>
     <string name="sua_thong_tin">Sửa thông tin</string>
