--- a/QuanLyNhaHang/app/src/main/res/values/strings.xml
+++ b/QuanLyNhaHang/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="thong_bao">Thông báo</string>
     <string name="dong">Đóng</string>
     <string name="kiem_tra_ket_noi_mang">Kiểm tra kết nối mạng</string>
+    <string name="them_moi">Thêm mới</string>
+    <string name="danh_sach_dat_ban">Danh sách đặt bàn</string>
 </resources>
