--- a/KhachHang/app/src/main/res/values/strings.xml
+++ b/KhachHang/app/src/main/res/values/strings.xml
@@ -86,5 +86,5 @@
     <string name="cap_nhat_dat_ban">Cập nhật đặt bàn</string>
     <string name="cap_nhat">Cập nhật</string>
     <string name="cap_nhat_dat_ban_thanh_cong">Cập nhật đặt bàn thành công</string>
-    <string name="thong_tin_cua_ban_da_duoc_cap_nhat">Thông của bạn đã được cập nhật</string>
+    <string name="thong_tin_cua_ban_da_duoc_cap_nhat">Thông tin của bạn đã được cập nhật</string>
 </resources>
